tz-local/resource/nexus/helm/ingress-nexus.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nexus
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
  - host: docker.default.eks_project.eks_domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonatype-nexus
            port:
              number: 5003
  - host: nexus.default.eks_project.eks_domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sonatype-nexus
            port:
              number: 8080
  tls:
    - hosts:
        - docker.default.eks_project.eks_domain
        - nexus.default.eks_project.eks_domain
      secretName: ingress-nexus-tls
